--- a/source/scss/base/_app.scss
+++ b/source/scss/base/_app.scss
@@ -3,6 +3,7 @@ $font-family-sans-serif: "Helvetica Neue", Helverica, Arial, sans-serif;
 
 $grey-border: #eee;
 $grey-text: #aaa;
+$blue-text: #00f;
 $black: #000;
 $white: #fff;
 
