--- a/source/scss/base/_items.scss
+++ b/source/scss/base/_items.scss
@@ -25,3 +25,21 @@
 .Item__description {
   flex-grow: 1;
 }
+
+.Paging {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.Paging__link {
+  margin: 4px;
+  padding: 0;
+  width: 40px;
+  text-align: center;
+  border: 1px solid $black;
+  border-radius: 4px;
+  cursor: pointer;
+  &--active {
+    color: $blue-text;
+  }
+}
