--- a/source/scss/base/_app.scss
+++ b/source/scss/base/_app.scss
@@ -65,11 +65,11 @@ h3 {
 
 button {
   background: transparent;
-  border-radius: 1.6rem;
+  border-radius: 5px;
   border: 0.1rem solid $black;
   cursor: pointer;
   font-size: 1.5rem;
-  padding: 0.7rem 2rem;
+  padding: 0.4rem 2rem;
 }
 
 button:disabled {
