--- a/source/scss/base/_items.scss
+++ b/source/scss/base/_items.scss
@@ -1,6 +1,17 @@
 .List {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
+}
+
+.List__pending {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 120px;
+  height: 120px;
+  transform: translate(-50%, -50%);
+  background-image: url(../assets/img/loader.gif);
 }
 
 .Item {
